...
    <string name="select_users">Select User(s)</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="group_icon">group_icon</string>
    <string name="select_location">Select Location</string>
    <string name="log_out">Log out</string>
    <string name="overflow_menu">overflow menu</string>
    <string name="schedule">schedule</string>
    <string name="user">user</string>
    <string name="notification">notification</string>
    <string name="big_owl">Big Owl</string>
    <string name="search_user">Search User</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="group_supervisor">Group Supervisor</string>
    <string name="end_time">End Time</string>
    <string name="you_last">You last</string>
    <string name="this_schedule_on">this schedule on</string>
    <string name="schedule_list">Schedules</string>
    <string name="schedule_title">Schedules title</string>
    <string name="schedule_start_time">Schedules Start time</string>
    <string name="inspect">inspect</string>
    <string name="general_location_justification">
        Location detection is required to check whether you have arrived to a scheduled location.\n\n
        If not provided, the system will assume you have not arrived to the location.
    </string>
    <string name="background_location_justification">
        Location access must be set to <b>Allow all the time</b> for background location access.\n\n
        Your location will be verified at the scheduled time without having to worry the app being open.
    </string>
    <string name="view_schedule">View Schedule</string>
    <string name="create_schedule">create schedule"</string>
    <string name="till">till</string>
    <string name="at">at</string>
    <string name="member_name">member_name</string>
    <string name="member_attendance">member_attendance</string>
    <string name="from">from</string>
...
