<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SearchContactsToSupervise">

    <include
        android:id="@+id/top_app_bar"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/get_users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_users"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_button_light"
        android:text="@string/search_user"
        android:textColor="@color/lightBlack" />

    <EditText
        android:id="@+id/search_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_app_bar"
        android:layout_margin="5dp"
        android:digits="0123456789+"
        android:hint="@string/enter_phone_number"
        android:importantForAutofill="no"
        android:inputType="phone" />

    <ListView
        android:id="@+id/listContacts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/get_users"
        android:layout_marginTop="5dp" />

</RelativeLayout>