...
        android:textColor="@color/lightBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invite_user_text" />

    <Button
        android:id="@+id/btnPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_button_greenish"
        android:text="@string/enter_phone_number"
        android:textColor="@color/lightBlack"
...
